name:                monarch
version:             0.1.0.0
synopsis:            Monadic interface for TokyoTyrant.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Noriyuki OHKAWA
maintainer:          n.ohkawa@gmail.com
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Database.Monarch
  build-depends:       base ==4.5.*
                     , mtl ==2.1.*
                     , bytestring ==0.9.*
                     , tokyotyrant-haskell ==1.0.*

test-suite unit-test
  hs-source-dirs:      test, .
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  build-depends:       base ==4.5.*
                     , mtl ==2.1.*
                     , bytestring ==0.9.*
                     , tokyotyrant-haskell ==1.0.*
                     , hspec ==1.3.*
                     , HUnit ==1.2.*
