name:                monarch
version:             0.10.0.0
synopsis:            Monadic interface for TokyoTyrant.
description:         This package provides simple monadic interface for TokyoTyrant.
license:             BSD3
license-file:        LICENSE
author:              Noriyuki OHKAWA <n.ohkawa@gmail.com>
maintainer:          Noriyuki OHKAWA <n.ohkawa@gmail.com>
category:            Database
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/notogawa/monarch

source-repository head
  type:                git
  location:            https://github.com/notogawa/monarch

flag develop
  description:         For developer
  default:             False

library
  hs-source-dirs:      src
  exposed-modules:     Database.Monarch
                       Database.Monarch.Mock
  other-modules:       Database.Monarch.Utils
                       Database.Monarch.Types
                       Database.Monarch.Action
                       Database.Monarch.Mock.Types
                       Database.Monarch.Mock.Action
  ghc-options:         -Wall
  build-depends:       base >=4.8 && <4.9
                     , mtl >=2.1 && <2.3
                     , transformers >=0.3 && <0.5
                     , bytestring >=0.9 && <0.11
                     , binary >=0.5 && <0.8
                     , network >=2.3 && <2.7
                     , resource-pool >=0.2.3.2 && <0.3
                     , monad-control >=1.0.0.4 && <1.1
                     , lifted-base >=0.2.3.6 && <0.3
                     , transformers-base >=0.4 && <0.5
                     , containers >=0.4 && <0.6
                     , stm >=2.3 && <2.5

test-suite specs
  if flag(develop)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  main-is:             Spec.hs
  other-modules:       Database.Monarch.ActionSpec
                       Database.Monarch.Mock.ActionSpec
  build-depends:       base
                     , monarch
                     , bytestring
                     , transformers
                     , hspec >=1.3

test-suite doctests
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base
                     , doctest

benchmark benchmark
  if flag(develop)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             benchmark.hs
  build-depends:       base
                     , monarch
                     , bytestring
                     , criterion
